--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -7,7 +7,7 @@ hibernate.connection.pool_size=10
 
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=update
 
 hibernate.show_sql=true
 hibernate.format_sql=true
