--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,16 @@
   <properties>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <version>1.0-SNAPSHOT</version>
   <name>TennisScorePet Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.10.2</version> <!-- актуальная версия на 2025 -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -64,6 +65,11 @@
   <build>
     <finalName>TennisScorePet</finalName>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+      </plugin>
       <!-- Компиляция -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
